--- a/src/sections/sections.scss
+++ b/src/sections/sections.scss
@@ -6,6 +6,13 @@
     font-weight: bold;
     font-size: 3.5vw;
     margin-top: 5vh;
+
+    @media screen and (max-width: 768px) {
+      font-size: 5vw;
+    }
+    @media screen and (max-width: 480px) {
+      font-size: 6.5vw;
+    }
   }
   .choiceSection {
     display: flex;
@@ -15,6 +22,14 @@
     margin: auto;
     flex-wrap: wrap;
     margin-top: 3vh;
+    @media screen and (max-width: 768px) {
+      flex-direction: column;
+      width: 80vw;
+      align-content: center;
+    }
+    @media screen and (max-width: 480px) {
+      width: 85vw;
+    }
     .sectionBlock {
       color: white;
       border: 5px solid;
@@ -40,6 +55,16 @@
         box-shadow: 0 2px 0px #3c354a;
         transition: ease 0.5s;
         cursor: pointer;
+      }
+      @media screen and (max-width: 1024px) {
+        font-size: 2vw;
+        letter-spacing: 4px;
+      }
+      @media screen and (max-width: 768px) {
+        font-size: 2.5vw;
+      }
+      @media screen and (max-width: 480px) {
+        font-size: 4vw;
       }
     }
   }
