Added history block

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,15 +1,15 @@
 .containerApp {
-  background-image: url("http://localhost:3000/images/background.png");
-  width: 100vw;
-  height: 300vh;
+  background-image: url("http://abc304d055b9.ngrok.io/images/background.png");
+  width: 100%;
+  height: 900vh;
   background-size: cover;
   position: absolute;
   top: 0;
   left: 0;
   @media screen and (max-width: 768px) {
-    height: 400vh;
+    height: 1700vh;
   }
   @media screen and (max-width: 480px) {
-    height: 500vh;
+    height: 1700vh;
   }
 }
