--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,5 @@
 .containerApp {
-  background-image: url("http://abc304d055b9.ngrok.io/images/background.png");
+  background-image: url("http://localhost:3000/images/background.png");
   width: 100%;
   height: 900vh;
   background-size: cover;
