--- a/src/sectionsBlock/sections/technicalSide/technicalSide.scss
+++ b/src/sectionsBlock/sections/technicalSide/technicalSide.scss
@@ -11,7 +11,7 @@
     &:nth-child(5) {
       margin-top: 2vh;
     }
-    &:nth-child(3){
+    &:nth-child(3) {
       margin-top: 3vh;
     }
     @media screen and (max-width: 480px) {
@@ -32,5 +32,31 @@
   }
   @media screen and (max-width: 480px) {
     font-size: 4.8vw;
+  }
+  .blockchainBlock {
+    display: flex;
+    flex-direction: column;
+
+    .infoBlockchain {
+      display: flex;
+      flex-direction: row;
+      &:nth-child(1){
+        margin-top: 5vh;
+      }
+      div{
+        &:nth-child(1){
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          width: 35vw;
+          img{
+            width: 30vw;
+          }
+        }
+        &:nth-child(2){
+          width: 40vw;
+        }
+      }
+    }
   }
 }
