--- a/src/sectionsBlock/sections/technicalSide/technicalSide.scss
+++ b/src/sectionsBlock/sections/technicalSide/technicalSide.scss
@@ -8,7 +8,9 @@
   div {
     &:nth-child(2),
     &:nth-child(4),
-    &:nth-child(5) {
+    &:nth-child(5),
+    &:nth-child(7),
+    &:nth-child(8) {
       margin-top: 2vh;
     }
     &:nth-child(3) {
@@ -18,7 +20,9 @@
       &:nth-child(2),
       &:nth-child(3),
       &:nth-child(4),
-      &:nth-child(5) {
+      &:nth-child(5),
+      &:nth-child(7),
+      &:nth-child(8) {
         margin-top: 5vh;
       }
     }
@@ -40,21 +44,88 @@
     .infoBlockchain {
       display: flex;
       flex-direction: row;
-      &:nth-child(1){
+      @media screen and (max-width: 768px) {
+        flex-direction: column-reverse;
+      }
+      &:nth-child(1) {
         margin-top: 5vh;
       }
-      div{
-        &:nth-child(1){
+      div {
+        &:nth-child(1) {
           display: flex;
           flex-direction: column;
           justify-content: center;
           width: 35vw;
-          img{
+          img {
             width: 30vw;
+            @media screen and (max-width: 768px) {
+              width: 50vw;
+            }
+            @media screen and (max-width: 480px) {
+              width: 70vw;
+            }
+          }
+          @media screen and (max-width: 768px) {
+            width: 80vw;
+            margin-top: 3vh;
+          }
+          @media screen and (max-width: 480px) {
+            width: 85vw;
+            margin-top: 6vh;
           }
         }
-        &:nth-child(2){
+        &:nth-child(2) {
           width: 40vw;
+          @media screen and (max-width: 768px) {
+            align-items: center;
+            width: 80vw;
+          }
+          @media screen and (max-width: 480px) {
+            width: 85vw;
+          }
+        }
+      }
+      .lockBlock {
+        @media screen and (max-width: 768px) {
+          display: none !important;
+        }
+      }
+    }
+  }
+  .videoCoinBlock {
+    display: flex;
+    flex-direction: row;
+    width: 75vw;
+    justify-content: space-between;
+    margin-top: 2vh;
+    .videoContent {
+      margin-top: 0vh !important;
+      display: flex;
+      flex-direction: column;
+      div {
+        &:nth-child(1) {
+          iframe {
+            width: 35.25vw;
+            height: 19.6vw;
+          }
+          width: 36vw;
+          height: 20.22vw;
+          @media screen and (max-width: 768px) {
+            width: 74vw;
+            height: 46vw;
+          }
+          @media screen and (max-width: 480px) {
+            width: 78vw;
+            height: 48.75vw;
+          }
+          border: 5px solid rgba(51, 187, 231, 1);
+          box-sizing: border-box;
+        }
+        &:nth-child(2) {
+          width: 36vw;
+          font-style: italic;
+          font-size: 1vw;
+          text-align: center;
         }
       }
     }
