--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,7 @@
 .containerApp {
-  background-image: url("http://localhost:3000/images/background.png");
+  background: url("http://localhost:3000/images/background.png");
   width: 100%;
-  height: 1900vh;
+  min-height: 1900vh;
   background-size: cover;
   position: absolute;
   top: 0;
