--- a/src/sectionsBlock/sections/useCoin/useCoin.scss
+++ b/src/sectionsBlock/sections/useCoin/useCoin.scss
@@ -5,5 +5,32 @@
   font-family: "JetBrains Mono";
   color: white;
   font-size: 1.5vw;
-  
+  div {
+    &:nth-child(2),
+    &:nth-child(3),
+    &:nth-child(4),
+    &:nth-child(5),
+    &:nth-child(6) {
+      margin-top: 2vh;
+    }
+    @media screen and (max-width: 480px) {
+      &:nth-child(2),
+      &:nth-child(3),
+      &:nth-child(4),
+      &:nth-child(5),
+      &:nth-child(6) {
+        margin-top: 5vh;
+      }
+    }
+    a {
+      font-style: italic;
+      color: #33bbe7;
+    }
+  }
+  @media screen and (max-width: 768px) {
+    font-size: 3vw;
+  }
+  @media screen and (max-width: 480px) {
+    font-size: 4.8vw;
+  }
 }
