--- a/src/sectionsBlock/sections/questions/questions.scss
+++ b/src/sectionsBlock/sections/questions/questions.scss
@@ -1,26 +1,34 @@
 .containerQuestions {
   display: flex;
   flex-direction: column;
-  margin-top: 10vh;
-  font-family: "JetBrains Mono";
-  color: white;
-  font-size: 1.5vw;
-
+  margin-top: 8vh;
+  @media screen and (max-width: 768px) {
+    font-size: 3vw;
+  }
+  @media screen and (max-width: 480px) {
+    font-size: 4.8vw;
+  }
   .containerQuestion {
     display: flex;
     flex-direction: column;
     margin-top: 5vh;
     .textFull {
-      height: 28vh;
+      height: 14vw;
       overflow: hidden;
       opacity: 1;
-      transition: all 0.5s ease-out;
+      transition: all 0.8s ease-out;
       font-style: italic;
+      @media screen and (max-width: 768px) {
+        height: 32.5vw;
+      }
+      @media screen and (max-width: 480px) {
+        height: 130vw;
+      }
     }
     .textHidden {
       height: 0vh;
       opacity: 0;
-      transition: all 0.5s ease-out;
+      transition: all 0.8s ease-out;
     }
     .titleQuestion {
       display: flex;
@@ -32,9 +40,23 @@
         transition: all ease 0.8s;
         transform: rotate(180deg);
         cursor: pointer;
+        @media screen and (max-width: 768px) {
+          width: 3vw;
+          margin-right: 2vw;
+        }
+        @media screen and (max-width: 480px) {
+          width: 5vw;
+          margin-right: 3vw;
+        }
       }
       p {
-        font-size: 1.9vw;
+        font-size: 1.6vw;
+        @media screen and (max-width: 768px) {
+          font-size: 3.2vw;
+        }
+        @media screen and (max-width: 480px) {
+          font-size: 5.12vw;
+        }
       }
       .stateImg {
         transform: rotate(0deg);
@@ -47,5 +69,4 @@
       background: rgba(231, 223, 51, 1);
     }
   }
-  
 }
