--- a/src/sectionsBlock/sections/technicalSide/technicalSide.scss
+++ b/src/sectionsBlock/sections/technicalSide/technicalSide.scss
@@ -1,10 +1,7 @@
 .containerTechnicalSide {
   display: flex;
   flex-direction: column;
-  margin-top: 10vh;
-  font-family: "JetBrains Mono";
-  color: white;
-  font-size: 1.5vw;
+  margin-top: 8vh;
   div {
     &:nth-child(2),
     &:nth-child(4),
@@ -58,6 +55,8 @@
           width: 35vw;
           img {
             width: 30vw;
+            transition: all 0.4s ease;
+            z-index: 3;
             @media screen and (max-width: 768px) {
               width: 50vw;
             }
@@ -86,6 +85,10 @@
         }
       }
       .lockBlock {
+        img{
+          width: 7vw !important;
+          margin-left: 11vw;
+        }
         @media screen and (max-width: 768px) {
           display: none !important;
         }
