--- a/src/sectionsBlock/sections/valuationCoin/valutionCoin.scss
+++ b/src/sectionsBlock/sections/valuationCoin/valutionCoin.scss
@@ -1,10 +1,7 @@
 .containerValutionCoin {
   display: flex;
   flex-direction: column;
-  margin-top: 10vh;
-  font-family: "JetBrains Mono";
-  color: white;
-  font-size: 1.5vw;
+  margin-top: 8vh;
   div {
     margin-top: 2vh;
     @media screen and (max-width: 480px) {
@@ -35,7 +32,7 @@
       }
       &:nth-child(1) {
         ul {
-          list-style-image: url("http://localhost:3000/images/plus.svg");
+          list-style-image: url("https://crypto-economic-app.herokuapp.com/images/plus.svg");
           li {
             margin-top: 2vh;
           }
@@ -44,7 +41,7 @@
 
       &:nth-child(2) {
         ul {
-          list-style-image: url("http://localhost:3000/images/minus.svg");
+          list-style-image: url("https://crypto-economic-app.herokuapp.com/images/minus.svg");
           li {
             margin-top: 2vh;
           }
