--- a/src/sectionsBlock/sections/useCoin/useCoin.scss
+++ b/src/sectionsBlock/sections/useCoin/useCoin.scss
@@ -6,16 +6,16 @@
     &:nth-child(2),
     &:nth-child(3),
     &:nth-child(4),
-    &:nth-child(5),
-    &:nth-child(6) {
+    &:nth-child(5)
+   {
       margin-top: 2vh;
     }
     @media screen and (max-width: 480px) {
       &:nth-child(2),
       &:nth-child(3),
       &:nth-child(4),
-      &:nth-child(5),
-      &:nth-child(6) {
+      &:nth-child(5)
+ {
         margin-top: 5vh;
       }
     }
