--- a/src/sectionsBlock/sections/questions/questions.scss
+++ b/src/sectionsBlock/sections/questions/questions.scss
@@ -7,6 +7,7 @@
   }
   @media screen and (max-width: 480px) {
     font-size: 4.8vw;
+    margin-top: 4vh;
   }
   .containerQuestion {
     display: flex;
@@ -34,12 +35,13 @@
       display: flex;
       flex-direction: row;
       margin-bottom: 1vh;
+      cursor: pointer;
       img {
         width: 2vw;
         margin-right: 1vw;
         transition: all ease 0.8s;
         transform: rotate(180deg);
-        cursor: pointer;
+
         @media screen and (max-width: 768px) {
           width: 3vw;
           margin-right: 2vw;
