--- a/src/sectionsBlock/sections/valuationCoin/valutionCoin.scss
+++ b/src/sectionsBlock/sections/valuationCoin/valutionCoin.scss
@@ -5,7 +5,7 @@
   div {
     margin-top: 2vh;
     @media screen and (max-width: 480px) {
-      margin-top: 5vh;
+      margin-top: 3vh;
     }
     a {
       font-style: italic;
@@ -17,6 +17,7 @@
   }
   @media screen and (max-width: 480px) {
     font-size: 4.8vw;
+    margin-top: 0;
   }
   .valutionBlock {
     display: flex;
