--- a/src/App.scss
+++ b/src/App.scss
@@ -9,8 +9,14 @@
 
     p{
       font-size: 1.05vw;
+      text-align: center;
       color: rgba(9,16,41,1);
-
+      @media screen and (max-width: 768px) {
+        font-size: 2.1vw;
+      }
+      @media screen and (max-width:480px) {
+        font-size: 3vw;
+      }
     }
   }
   .arrowUp{
