--- a/src/sectionsBlock/sections/useCoin/useCoin.scss
+++ b/src/sectionsBlock/sections/useCoin/useCoin.scss
@@ -6,7 +6,7 @@
     &:nth-child(2),
     &:nth-child(3),
     &:nth-child(4),
-    &:nth-child(5)
+    &:nth-child(7)
    {
       margin-top: 2vh;
     }
@@ -14,7 +14,7 @@
       &:nth-child(2),
       &:nth-child(3),
       &:nth-child(4),
-      &:nth-child(5)
+      &:nth-child(7)
  {
         margin-top: 3vh;
       }
@@ -24,11 +24,51 @@
       color: #33bbe7;
     }
   }
+  .diagrams {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+    margin-bottom: 1vw;
+    @media screen and (max-width: 768px) {
+      flex-wrap: wrap;
+    }
+    @media screen and (max-width: 480px) {
+      flex-direction: column;
+      align-items: center;
+      flex-wrap: nowrap;
+    }
+    .diagram_item {
+      fill: #e7df33;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-top: 0 !important;
+      p{
+        font-size: 1.5vw;
+        font-style: italic;
+        @media screen and (max-width: 768px) {
+          font-size: 3vw;
+        }
+        @media screen and (max-width: 480px) {
+          font-size: 5vw;
+        }
+      }
+      width: 25%;
+      @media screen and (max-width: 768px) {
+        width: 50%;
+      }
+      @media screen and (max-width: 480px) {
+        width: 80%;
+      }
+    }
+
+  }
+
   @media screen and (max-width: 768px) {
     font-size: 3vw;
   }
   @media screen and (max-width: 480px) {
-    font-size: 4.8vw;
+    font-size: 5vw;
     margin-top: 4vh;
   }
 }
